# ksp-x52

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
cmake/: FindKrpcCnano.cmake
src/: main.c
